infra/k8s/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-nodeport-service
spec:
  type: NodePort
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4003
      targetPort: 4003
